--- a/Index.html
+++ b/Index.html
@@ -7,30 +7,30 @@
     <title>WEB STUDIO</title>
   </head>
   <body>
+  
     <header>
       <nav>
-        <a href="./"> <span>WEB</span>STUDIO</a>
-        <a href="">Studio</a>
-        <a href="">Portfolio</a>
-        <a href="">Contacts</a>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <la>a href="">Contacts</a></li>
+        </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11(000)1111111">+11(000)1111111</a>
+        <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+       <li><a href="tel:+11(000)1111111">+110001111111</a></li>
+        </ul>
       </address>
     </header>
     <main>
       <section>
-        <img
-          src="./images/Dark-bg-min.jpg"
-          alt="background"
-          width="1440"
-          height="600"
-        />
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -53,12 +53,14 @@
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <>
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
+          </section>
+          <section>
             <h2>What are we doing</h2>
             <ul>
               <li>
