--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
-        <la>a href="">Contacts</a></li>
+        <la><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -133,17 +133,11 @@
       </section>
     </main>
     <footer>
-      <a href="./"> <span>WEB</span>STUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-      <img
-        src="./images/Dark-bg-min.jpg"
-        alt="background"
-        width="1440"
-        height="310"
-      />
     </footer>
   </body>
 </html>
