--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
     <title>WEB STUDIO</title>
   </head>
   <body>
-  
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-       <li><a href="tel:+11(000)1111111">+110001111111</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11(000)1111111</a></li>
         </ul>
       </address>
     </header>
@@ -53,38 +52,38 @@
               growth opportunities and minimize risk.
             </p>
           </li>
-          <>
+          <li>
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
-          </section>
-          <section>
-            <h2>What are we doing</h2>
-            <ul>
-              <li>
-                <img
-                  src="./images/section1-min.jpg"
-                  alt="Example of work"
-                  width="360"
-                />
-              </li>
-              <li>
-                <img
-                  src="./images/section2-min.jpg"
-                  alt="Example of work"
-                  width="360"
-                />
-              </li>
-              <li>
-                <img
-                  src="./images/section3-min.jpg"
-                  alt="Example of work"
-                  width="360"
-                />
-              </li>
-            </ul>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/section1-min.jpg"
+              alt="Example of work"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/section2-min.jpg"
+              alt="Example of work"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/section3-min.jpg"
+              alt="Example of work"
+              width="360"
+            />
           </li>
         </ul>
       </section>
